Update pixel art 18x18.html

--- a/pixel art 18x18.html
+++ b/pixel art 18x18.html
@@ -9,7 +9,6 @@
 
 </head>
 <body style="background-color: #374a74">
-<a href="index.html" class="vissza">vissza</a>
 
   <div class="pen" style="background-color:red;" onclick="setPenColour('red')"></div>
   <div class="pen" style="background-color:chartreuse;" onclick="setPenColour('chartreuse')"></div>
@@ -22,7 +21,7 @@
 
   <div class="pen" style="background-color:white;" onclick="setPenColour('white')"></div>
   <div class="pen" style="background-color:black;" onclick="setPenColour('black')"></div>
-  <a class="text">Ez a kiválasztott szín:</a>
+  <a class="text">Ez a kivÃ¡lasztott szÃ­n:</a>
   <div class="kv" id="kv" style="background-color:black;" ></div>
 
 
@@ -404,8 +403,8 @@
   </div>
 
 <br>
-<button class="btn1" id='but_screenshot'  onclick='screenshot();'>Kép generálása!</button>
-<h2>Ha kész vagy a rajzolással kattints a "Kép generálása!" gombra majd töltsd le az ezalatt a szöveg alatt megjelenõ képet! (jobb klikk :D ) </h2> 
+<button class="btn1" id='but_screenshot'  onclick='screenshot();'>KÃ©p generÃ¡lÃ¡sa!</button>
+<h2>Ha kÃ©sz vagy a rajzolÃ¡ssal kattints a "KÃ©p generÃ¡lÃ¡sa!" gombra majd tÃ¶ltsd le az ezalatt a szÃ¶veg alatt megjelenÃµ kÃ©pet! (jobb klikk :D ) </h2> 
 <br>
 <br>
 
