--- a/pixel art 18x18.html
+++ b/pixel art 18x18.html
@@ -1,4 +1,6 @@
-<html><head>
+<html>
+  <meta charset="UTF-8">
+  <head>
 	<title>Pixel Art</title>
 	<link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -9,6 +11,7 @@
 
 </head>
 <body style="background-color: #374a74">
+<a href="index.html" class="vissza">vissza</a>
 
   <div class="pen" style="background-color:red;" onclick="setPenColour('red')"></div>
   <div class="pen" style="background-color:chartreuse;" onclick="setPenColour('chartreuse')"></div>
@@ -404,7 +407,7 @@
 
 <br>
 <button class="btn1" id='but_screenshot'  onclick='screenshot();'>Kép generálása!</button>
-<h2>Ha kész vagy a rajzolással kattints a "Kép generálása!" gombra majd töltsd le az ezalatt a szöveg alatt megjelenõ képet! (jobb klikk :D ) </h2> 
+<h2>Ha kész vagy a rajzolással kattints a "Kép generálása!" gombra majd táltsd le az ezalatt a szöveg alatt megjelenő képet! (jobb klikk :D ) </h2> 
 <br>
 <br>
 
