Update pixel art 18x18.html

--- a/pixel art 18x18.html
+++ b/pixel art 18x18.html
@@ -406,7 +406,7 @@
 
 <br>
 <button class="btn1" id='but_screenshot'  onclick='screenshot();'>Kép generálása!</button>
-<h2>Ha kész vagy a rajzolással kattints a "Kép generálása!" gombra majd táltsd le az ezalatt a szöveg alatt megjelenő képet! (jobb klikk :D ) </h2> 
+<h2>Ha kész vagy a rajzolással kattints a "Kép generálása!" gombra majd töltsd le az ezalatt a szöveg alatt megjelenő képet! (jobb klikk :D ) </h2> 
 <br>
 <br>
 
